<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/mainFragment">
    <fragment
        android:id="@+id/mainFragment"
        android:name="fbo.costa.bootcampeveris.ui.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_challenge1Fragment"
            app:destination="@id/challenge1Fragment" />

        <action
            android:id="@+id/action_mainFragment_to_challenge2Fragment"
            app:destination="@id/challenge2Fragment" />

        <action
            android:id="@+id/action_mainFragment_to_challenge3Fragment"
            app:destination="@id/challenge3Fragment" />

        <action
            android:id="@+id/action_mainFragment_to_challenge4Fragment"
            app:destination="@id/challenge4Fragment" />

        <action
            android:id="@+id/action_mainFragment_to_challenge5Fragment"
            app:destination="@id/challenge5Fragment" />

        <action
            android:id="@+id/action_mainFragment_to_challenge6Fragment"
            app:destination="@id/challenge6Fragment" />

        <action
            android:id="@+id/action_mainFragment_to_challenge7Fragment"
            app:destination="@id/challenge7Fragment" />

        <action
            android:id="@+id/action_mainFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />

    </fragment>

    <fragment
        android:id="@+id/challenge1Fragment"
        android:name="fbo.costa.bootcampeveris.ui.challenge1.Challenge1Fragment"
        android:label="@string/text_title_challenge1"
        tools:layout="@layout/challenge1_fragment" />

    <fragment
        android:id="@+id/challenge2Fragment"
        android:name="fbo.costa.bootcampeveris.ui.challenge2.Challenge2Fragment"
        android:label="@string/text_title_challenge2"
        tools:layout="@layout/challenge2_fragment" />

    <fragment
        android:id="@+id/challenge3Fragment"
        android:name="fbo.costa.bootcampeveris.ui.challenge3.Challenge3Fragment"
        android:label="@string/text_title_challenge3"
        tools:layout="@layout/challenge3_fragment" />

    <fragment
        android:id="@+id/challenge4Fragment"
        android:name="fbo.costa.bootcampeveris.ui.challenge4.Challenge4Fragment"
        android:label="@string/text_title_challenge4"
        tools:layout="@layout/challenge4_fragment" />

    <fragment
        android:id="@+id/challenge5Fragment"
        android:name="fbo.costa.bootcampeveris.ui.challenge5.Challenge5Fragment"
        android:label="@string/text_title_challenge5"
        tools:layout="@layout/challenge5_fragment" />

    <fragment
        android:id="@+id/challenge6Fragment"
        android:name="fbo.costa.bootcampeveris.ui.challenge6.Challenge6Fragment"
        android:label="@string/text_title_challenge6"
        tools:layout="@layout/challenge6_fragment" />

    <fragment
        android:id="@+id/challenge7Fragment"
        android:name="fbo.costa.bootcampeveris.ui.challenge7.Challenge7Fragment"
        android:label="@string/text_title_challenge7"
        tools:layout="@layout/challenge7_fragment" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="fbo.costa.bootcampeveris.ui.AboutFragment"
        android:label="@string/text_about_title" />

</navigation>
