<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.MainFragment">

            <TextView
                android:id="@+id/text_basic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_basic_challenge"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:constraint_referenced_ids="button_challenge1,button_challenge2,button_challenge3"
                app:flow_horizontalStyle="spread_inside"
                app:flow_wrapMode="aligned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_basic" />

            <Button
                android:id="@+id/button_challenge1"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:text="@string/text_title_challenge1"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/cutAppearance" />

            <Button
                android:id="@+id/button_challenge2"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:text="@string/text_title_challenge2"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/cutAppearance" />

            <Button
                android:id="@+id/button_challenge3"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:text="@string/text_title_challenge3"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/cutAppearance" />

            <TextView
                android:id="@+id/text_intermediate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_intermediate_challenge"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_challenge3" />

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:constraint_referenced_ids="button_challenge4,button_challenge5,button_challenge6, button_challenge7, button_challenge8, button_challenge9, button_challenge10, button_challenge11"
                app:flow_horizontalStyle="spread_inside"
                app:flow_wrapMode="aligned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_intermediate" />

            <Button
                android:id="@+id/button_challenge4"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:text="@string/text_title_challenge4"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/cutAppearance" />

            <Button
                android:id="@+id/button_challenge5"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:text="@string/text_title_challenge5"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/cutAppearance" />

            <Button
                android:id="@+id/button_challenge6"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:text="@string/text_title_challenge6"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/cutAppearance" />

            <Button
                android:id="@+id/button_challenge7"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:text="@string/text_title_challenge7"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/cutAppearance" />

            <Button
                android:id="@+id/button_challenge8"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:text="@string/text_title_challenge8"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/cutAppearance" />

            <Button
                android:id="@+id/button_challenge9"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:text="@string/text_title_challenge9"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/cutAppearance" />

            <Button
                android:id="@+id/button_challenge10"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:text="@string/text_title_challenge10"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/cutAppearance" />

            <Button
                android:id="@+id/button_challenge11"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:text="@string/text_title_challenge11"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/cutAppearance" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/dio_logo" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/everis_logo" />

    </LinearLayout>

    <TextView
        android:id="@+id/tet_tile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:text="@string/text_bootcamp_title"
        android:textColor="#66000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
